# axum-ddd-explicit-architecture

./: Cargo.toml  DATABASE.md  README.md  SERVER.md  compose.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
Docker/db/: Dockerfile  init.sql
src/: handler.rs  main.rs
src/config/: connect.rs
src/crates/domain/: Cargo.toml
src/crates/domain/src/: aggregate.rs  interface.rs  lib.rs
src/crates/domain/src/aggregate/: circle.rs  member.rs  value_object.rs
src/crates/domain/src/aggregate/value_object/: circle_id.rs  grade.rs  major.rs  member_id.rs
src/crates/domain/src/interface/: circle_repository_interface.rs
src/crates/infrastructure/: Cargo.toml
src/crates/infrastructure/src/: circle_repository.rs  circle_repository_with_my_sql.rs  db.rs  db_data.rs  lib.rs
src/crates/infrastructure/src/db_data/: circle_data.rs  member_data.rs
src/crates/usecase/: Cargo.toml
src/crates/usecase/src/: create_circle.rs  fetch_circle.rs  lib.rs  update_circle.rs
src/tests/: test.rs
