[package]
name = "axum-ddd-explicit-architecture"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.86"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "env-filter",
    "fmt",
] }
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio-native-tls"] }

domain = { path = "./src/crates/domain" }
usecase = { path = "./src/crates/usecase" }
infrastructure = { path = "./src/crates/infrastructure" }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }

[workspace]
members = [
    "src/crates/infrastructure",
    "src/crates/domain",
    "src/crates/usecase",
]
